--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -28,3 +28,5 @@
     conflicts = !git ls-files --unmerged | cut -c51- | sort -u | xargs $EDITOR
     resolve = !git ls-files --unmerged | cut -c51- | sort -u | xargs git add
 
+[branch]
+    autosetuprebase = always
